add icon & more

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,12 @@
     "manifest_version": 2,
     "content_scripts": [{
         "matches": ["https://live2.nicovideo.jp/watch/*"],
-        "js": ["script.js"]
-    }]
+        "js": ["script.js","jquery-3.4.1.min.js"]
+    }],
+    "icons": {
+        "16": "images/icon16.png",
+        "32": "images/icon32.png",
+        "48": "images/icon48.png",
+        "128": "images/icon128.png"
+    }
 }
