--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "ニコニ広告ex.",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "description": "ニコニコ動画・生放送内のニコニ広告を生放送ギフトのようにコメント欄に表示させます。",
     "icons": {
         "16": "images/icon16.png",
@@ -16,7 +16,7 @@
                 "https://www.nicovideo.jp/watch/*"
             ],
             "js": [
-                "script.js"
+                "jquery-3.5.1.min.js","script.js"
             ]
         }
     ],
