--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
     "manifest_version": 2,
     "name": "ニコニ広告ex.",
-    "version": "1.2.5",
+    "version": "2.0.0",
     "description": "ニコニコ動画・生放送内のニコニ広告を生放送ギフトのようにコメント欄に表示させます。",
     "icons": {
         "16": "images/icon16.png",
         "32": "images/icon32.png",
         "48": "images/icon48.png",
-        "128": "images/icon128.png"
+        "128": "images/icon128.png",
+        "500": "images/icon500.png"
     },
     "content_scripts": [
         {
@@ -17,7 +18,7 @@
                 "https://www.nicovideo.jp/watch/*"
             ],
             "js": [
-                "jquery-3.5.1.min.js","script.js"
+                "js/jquery-3.5.1.min.js","js/script.js"
             ]
         },
         {
@@ -25,13 +26,13 @@
                 "https://nicoad.nicovideo.jp/campaign"
             ],
             "js": [
-                "jquery-3.5.1.min.js","popup_files/campaign.js"
+                "js/jquery-3.5.1.min.js","popup_files/js/campaign.js"
             ],
             "all_frames": true
         }
     ],
     "browser_action": {
-		"default_icon": "images/icon32.png",
+		"default_icon": "images/icon128.png",
         "default_title": "",
         "default_popup": "popup_files/popup.html"
 	},
