--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,9 @@
             ],
             "js": [
                 "js/jquery-3.5.1.min.js","js/script.js"
+            ],
+            "css":[
+                "css/nicolive.css"
             ]
         },
         {
