--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "ニコニ広告ex.",
-    "version": "2.0.2",
+    "version": "2.1.0",
     "description": "ニコニコ動画・生放送内のニコニ広告を生放送ギフトのようにコメント欄に表示させます。",
     "icons": {
         "16": "images/icon16.png",
@@ -27,6 +27,19 @@
         },
         {
             "matches": [
+                "https://dic.nicovideo.jp/*",
+                "https://seiga.nicovideo.jp/seiga/*",
+                "https://3d.nicovideo.jp/*"
+            ],
+            "js": [
+                "js/jquery-3.5.1.min.js","js/overlay_scripts.js"
+            ],
+            "css":[
+                "css/overlay.css"
+            ]
+        },
+        {
+            "matches": [
                 "https://nicoad.nicovideo.jp/campaign"
             ],
             "js": [
@@ -37,10 +50,14 @@
     ],
     "browser_action": {
 		"default_icon": "images/icon128.png",
-        "default_title": "",
+        "default_title": "ニコニ広告ex.",
         "default_popup": "popup_files/popup.html"
 	},
     "permissions": [
         "*://*.nicovideo.jp/"
+    ],
+    "web_accessible_resources": [
+        "images/icon128.png",
+        "images/logo.png"
     ]
 }
