--- a/manifest.json
+++ b/manifest.json
@@ -58,7 +58,6 @@
     ],
     "web_accessible_resources": [
         "images/icon128.png",
-        "images/logo.png",
-        "js/jquery-3.5.1.min.js"
+        "images/logo.png"
     ]
 }
